# CMakeList.txt : CMake project for LinkedList, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (InsertionSort "main.cpp"  "InsertionSort.cpp" "InsertionSort.hpp")

# TODO: Add tests and install targets if needed.
